5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1745_3093.log
== SUBMITION (2019-05-15 14:18:40) 
-- CODE:
soma = v + e 
v = 3
e = 1
d = 0
r = int(input("resultado do jogo: "))
while (r == v or r == e or r == d and != x):
	if ( r == v):
		v = v + 3

	elif (r == e):
		e = e + 1
	else:
		d = d + 0
print(soma)		

		

-- EXECUTION TIME:
0.219121
-- ERROR:
  File "/home/codebench/codes/1745/3093/main.py", line 6
    while (r == v or r == e or r == d and != x):
                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:18:41) 
-- CODE:
soma = v + e 
v = 3
e = 1
d = 0
r = int(input("resultado do jogo: "))
while (r == v or r == e or r == d and != x):
	if ( r == v):
		v = v + 3

	elif (r == e):
		e = e + 1
	else:
		d = d + 0
print(soma)		

		

-- ERROR:
File "XXXX", line 6
    while (r == v or r == e or r == d and != x):
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:19:02) 
-- CODE:
soma = v + e 
v = 3
e = 1
d = 0
r = input("resultado do jogo: ")
while (r == v or r == e or r == d and != x):
	if ( r == v):
		v = v + 3

	elif (r == e):
		e = e + 1
	else:
		d = d + 0
print(soma)		

		

-- ERROR:
File "XXXX", line 6
    while (r == v or r == e or r == d and != x):
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:20:54) 
-- CODE:
soma = v + e 
v = 3.upper()
e = 1.upper()
d = 0.upper()
r = input("resultado do jogo: ")
while (r == v or r == e or r == d ):
	if ( r == v):
		v = v + 3

	elif (r == e):
		e = e + 1
	elif (r == x):
		r = input("resultado do jogo: ")
		
	else: 
		d = d + 0
		
-- ERROR:
File "XXXX", line 2
    v = 3.upper()
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:21:38) 
-- CODE:
soma = v + e 
v.upper() = 3
e.upper() = 1
d.upper() = 0
r = input("resultado do jogo: ")
while (r == v or r == e or r == d ):
	if ( r == v):
		v = v + 3

	elif (r == e):
		e = e + 1
	elif (r == x):
		r = input("resultado do jogo: ")
		
	else: 
		d = d + 0
		
-- ERROR:
File "XXXX", line 2
    v.upper() = 3
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:33) 
-- CODE:
soma = v + e 
v = 3
e = 1
d = 0
r = input("resultado do jogo: ").upper()
while (r == v or r == e or r == d ):
	if ( r == v):
		v = v + 3

	elif (r == e):
		e = e + 1
	elif (r == x):
		r = input("resultado do jogo: ").upper()
		
	else: 
		d = d + 0
print(soma)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    soma = v + e 
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:30:11) 
-- CODE:
v = 3
e = 1

r = input("resultado do jogo: ").upper()
while (r == v or r == e ):
	if ( r == v):
		v = 3 + v
		print(v)
	elif ( r == e):
		e = 1 + e
		print(e)
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    soma = v + e 
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:59) 
-- CODE:
v = 3
e = 1

r = input("resultado do jogo: ")
while (r == v or r == e ):
	if ( r == v):
		v = 3 + v
		r = input("resultado do jogo: ")
		print(v)
	elif ( r == e):
		e = 1 + e
		r = input("resultado do jogo: ")
		print(e)
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    soma = v + e 
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:50) 
-- CODE:
v = 3
e = 1

r = input("resultado do jogo: ")
while (r == v or r == e ):
	if ( r == v):
		v = 3 + v
		print(v)
	elif ( r == e):
		e = 1 + e
		print(e)
r = input("resultado do jogo: ")		
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    soma = v + e 
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:36) 
-- CODE:
v = 3
e = 1
d = 0
r = input("resultado do jogo: ").upper()
while (r == v or r == e):
	v = v + 3
	e = e + 1
	print(v)
	print(e)
r = input("resultado do jogo: ").upper()	

		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    soma = v + e 
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:40:15) 
-- CODE:
v = 3
e = 1
d = 0
r = input("resultado do jogo: ").upper()
while (r == v or r == e):
	r = input("resultado do jogo: ").uper()
	v = v + 3
	e = e + 1
	print(v)
	print(e)
r = input("resultado do jogo: ").upper()	

		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    soma = v + e 
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:40:29) 
-- CODE:
v = 3
e = 1
d = 0
r = input("resultado do jogo: ").upper()
while (r == v or r == e):
	r = input("resultado do jogo: ").uper()
	v = v + 3
	e = e + 1
print(v)
print(e)
r = input("resultado do jogo: ").upper()	

		
		
	
-- OUTPUT:
3
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:43:19) 
-- CODE:
v = 3
e = 1
d = 0
r = input("resultado do jogo: ").upper()
while (r == v or r == e):
	
	v = v + 3
	e = e + 1
	r = input("resultado do jogo: ")
print(v)
print(e)


		
		
	
-- OUTPUT:
3
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:20) 
-- CODE:
v = 3
e = 1
d = 0
r = input("resultado do jogo: ").upper()
while (r == v or r == e):
	if ( r == v):
		v = v + 3
		print(v)
	elif ( r == e):
		e = e + 1
		print(e)
r = input("resultado do jogo: ").upper()

		
		
	
-- OUTPUT:
3
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:42) 
-- CODE:
v = 3
e = 1
d = 0
r = input("resultado do jogo: ").upper()
while (r == v or r == e):
	if ( r == v):
		v = v + 3
		print(v)
	elif ( r == e):
		e = e + 1
		print(e)
r = input("resultado do jogo: ").upper()

		
		
	
-- OUTPUT:
3
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:14) 
-- CODE:
v = 3
e = 1
d = 0
r = input("resultado do jogo: ").upper()
while (r == v or r == e):
	if ( r == v):
		v = v + 3
		print(v)
	else:
		e = e + 1
		print(e)
r = input("resultado do jogo: ").upper()

		
		
	
-- OUTPUT:
3
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:43) 
-- CODE:
v = 3
e = 1
d = 0
r = input("resultado do jogo: ").upper()
while (r == v and  r == e):
	if ( r = v):
		v = v + 3
		print(v)
	else:
		e = e + 1
		print(e)
r = input("resultado do jogo: ").upper()

		
		
	
-- ERROR:
File "XXXX", line 6
    if ( r = v):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:54) 
-- CODE:
v = 3
e = 1
d = 0
r = input("resultado do jogo: ").upper()
while (r == v and  r == e):
	if ( r == v):
		v = v + 3
		print(v)
	else:
		e = e + 1
		print(e)
r = input("resultado do jogo: ").upper()

		
		
	
-- ERROR:
File "XXXX", line 6
    if ( r = v):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
